# omnis-vanitas

./: .releaserc.json  Cargo.toml  README.md  en_elb  index.html  justfile  omnis-vanitas.code-workspace  omnis-vanitas.js  omnis-vanitas_bg.wasm  sw.js
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml  verify.yml
assets/: manifest.json  sw.js
src/: app.rs  lib.rs  main.rs  outcalls.rs
