[package]
name = "omnis-vanitas"
version = "0.0.0"
edition = "2021"
description = "omnis-vanitas"
license = "Apache-2.0"
keywords = ["frontend"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = { version = "0.20.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
translation-server-client-silen = "0.1.8"
translation-server-dtos-silen = "0.1.3"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2